crates/dioform/tests/derive_contract/fail/enum_model.rs
#![allow(dead_code)]

use dioform::Form;

#[derive(Form)]
enum FormChoice {
    Login,
    Signup,
}

fn main() {}
